--- a/admin_login.html
+++ b/admin_login.html
@@ -16,6 +16,8 @@
 
         <!-- Stylesheet -->
         <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+    	<script type="text/javascript" src="js/bootstrap.js"></script>
     </head>
 
 
@@ -33,9 +35,8 @@
                 </div>
             </div>
         </div>
-        
 		<script src="https://www.gstatic.com/firebasejs/5.7.1/firebase.js"></script>
-			<script>
+		<script>
 			// Initialize Firebase
 			var config = {
                 apiKey: "AIzaSyC8GJ3YgxCbA6rnMqtAFFRhWGJmmRkNwmA",
